Add product filtering

--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -29,9 +29,9 @@
                 Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="accessories-link">
-                <a href="{% url 'products' %}?category=bed_bath" class="dropdown-item">Strings</a>
-                <a href="{% url 'products' %}?category=kitchen_dining" class="dropdown-item">Tuners</a>
-                <a href="{% url 'products' %}?category=bed_bath,kitchen_dining" class="dropdown-item">All Accessories</a>
+                <a href="{% url 'products' %}?category=strings" class="dropdown-item">Strings</a>
+                <a href="{% url 'products' %}?category=tuners" class="dropdown-item">Tuners</a>
+                <a href="{% url 'products' %}?category=strings,tuners" class="dropdown-item">All Accessories</a>
             </div>
         </li>
 
