--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -42,7 +42,7 @@
                                         <img class="img-fluid rounded" src="{{ item.product.image.url }}">
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                        <p class="my-0"><strong><a href="/products/{{ item.product.id }}">{{ item.product.name }}</a></strong></p>
                                         <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                                     </td>
                                     <td class="py-3">
