--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-black">
-                    The latest guitars have arrived!
+                    Find your dream instrument <strong>TODAY!</strong>
                 </h1>
                 <div class="my-5">
                     <h4>
@@ -24,4 +24,49 @@
             </div>
         </div>
     </div>
+<!-- container for highlighted product categories -->
+    <div class="container-fluid category-highlighted py-5">
+        <div class="text-center">
+            <!-- <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3"> -->
+                <h3 class="text-black">
+                    Shop by category below:
+                </h3>
+                <div class="row my-5 align-items-center justify-content-center">
+                    <div class="col-10 col-lg-3 col-xl-2">
+                        <div class="card p-3">
+                            <img class="card-img-top" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Electric Guitars</h5>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="col-10 col-lg-3 col-xl-2">
+                        <div class="card p-3">
+                            <img class="card-img-top" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Electric Guitars</h5>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="col-10 col-lg-3 col-xl-2">
+                        <div class="card p-3">
+                            <img class="card-img-top" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Electric Guitars</h5>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="col-10 col-lg-3 col-xl-2">
+                        <div class="card p-3">
+                            <img class="card-img-top" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Electric Guitars</h5>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+            <!-- </div> -->
+        </div>
+    </div>
+
 {% endblock %}
