--- a/templates/base.html
+++ b/templates/base.html
@@ -138,10 +138,8 @@
 
     {% block content %}
     {% endblock %}
-<!-- footer section elements -->
 
-<!-- Footer information -->
-<!-- Footer -->
+<!-- Footer based on https://mdbootstrap.com/snippets/standard/mdbootstrap/2885008?view=side with customisation and styling changes -->
 <footer
             class="text-center text-lg-start text-white"
             style="background-color: #000000"
