--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,12 +10,14 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container h-100 text-center">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    Find your dream instrument <strong>TODAY!</strong>
-                </h1>
+            <div class="col-12 my-auto">
+                <div class="sub-heading">
+                    <h1 class="display-4 logo-font text-black p-1">
+                    Find your <span class="emphasis">dream</span> instrument <span class="emphasis">TODAY!</span>
+                    </h1>
+                </div>
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
