--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,38 +33,46 @@
                 <h3 class="text-black">
                     Shop by category below:
                 </h3>
-                <div class="row my-5 align-items-center justify-content-center">
+                <div class="row my-5 align-items-center justify-content-center">                 
                     <div class="col-10 col-lg-3 col-xl-2">
-                        <div class="card p-3">
-                            <img class="card-img-top" src="/media/14991870_800-crop.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Electric Guitars</h5>
+                        <a href="{% url 'products' %}?category=electric_guitars">
+                            <div class="card p-3">
+                                <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Electric Guitars</h5>
+                                </div>
                             </div>
-                        </div> 
+                        </a>
                     </div>
                     <div class="col-10 col-lg-3 col-xl-2">
-                        <div class="card p-3">
-                            <img class="card-img-top" src="/media/14991870_800-crop.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Electric Guitars</h5>
+                        <a href="{% url 'products' %}?category=acoustic_guitars">
+                            <div class="card p-3">
+                                <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Acoustic Guitars</h5>
+                                </div>
                             </div>
-                        </div> 
+                        </a>
                     </div>
                     <div class="col-10 col-lg-3 col-xl-2">
-                        <div class="card p-3">
-                            <img class="card-img-top" src="/media/14991870_800-crop.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Electric Guitars</h5>
+                        <a href="{% url 'products' %}?category=accessories">
+                            <div class="card p-3">
+                                <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Accessories</h5>
+                                </div>
                             </div>
-                        </div> 
+                        </a>
                     </div>
                     <div class="col-10 col-lg-3 col-xl-2">
-                        <div class="card p-3">
-                            <img class="card-img-top" src="/media/14991870_800-crop.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Electric Guitars</h5>
+                        <a href="{% url 'products' %}?category=amplifiers">
+                            <div class="card p-3">
+                                <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Amplifiers</h5>
+                                </div>
                             </div>
-                        </div> 
+                        </a>
                     </div>
                 </div>
             <!-- </div> -->
