--- a/static/css/base.css
+++ b/static/css/base.css
@@ -168,11 +168,20 @@ address a:hover {
 .emphasis {
     color: white;
     text-shadow: #000;
+    background-color: #000;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .sub-heading {
     background-color: #ffffff1c;
     margin-bottom: 12rem;
+}
+
+.category-img:hover,
+.category-img:active,
+.category-img:focus {
+    size: 110%;
 }
 
 .border-black {
@@ -219,6 +228,18 @@ a.category-badge > span.badge:hover {
 input[name='q']::placeholder {
     color: #aab7c4;
 }
+
+/* image zoom classes based on https://www.w3schools.com/howto/howto_css_zoom_hover.asp */
+
+.zoom {
+    padding: 50px;
+    transition: transform .4s; /* Animation */
+    margin: 0 auto;
+  }
+  
+  .zoom:hover {
+    transform: scale(1.2);
+  }
 
 /* ------------------------------- bootstrap toasts */
 
