Add blog app, template and post model

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -39,7 +39,7 @@
                             <div class="card p-3">
                                 <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Electric Guitars</h5>
+                                    <h5 class="card-title text-black">Electric Guitars</h5>
                                 </div>
                             </div>
                         </a>
@@ -49,7 +49,7 @@
                             <div class="card p-3">
                                 <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Acoustic Guitars</h5>
+                                    <h5 class="card-title text-black">Acoustic Guitars</h5>
                                 </div>
                             </div>
                         </a>
@@ -59,7 +59,7 @@
                             <div class="card p-3">
                                 <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Accessories</h5>
+                                    <h5 class="card-title text-black">Accessories</h5>
                                 </div>
                             </div>
                         </a>
@@ -69,7 +69,7 @@
                             <div class="card p-3">
                                 <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Amplifiers</h5>
+                                    <h5 class="card-title text-black">Amplifiers</h5>
                                 </div>
                             </div>
                         </a>
