--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -37,13 +37,13 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black emph-black-bg" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Special Offers
+                Blog
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
-                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
-                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
-                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
+                <a href="" class="dropdown-item">Top Posts</a>
+                <a href="" class="dropdown-item">Latest Posts</a>
+                <a href="" class="dropdown-item">Placeholder</a>
+                <a href="" class="dropdown-item">Placeholder</a>
             </div>
         </li>
     </ul>
