--- a/blog/templates/blog/blog_posts.html
+++ b/blog/templates/blog/blog_posts.html
@@ -21,19 +21,15 @@
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}" alt=" {{ post.alt_tag }} ">
                                 {% endif %}
-                                <div class="image-flash">
-                                    <p class="author">Author: {{ post.author }}</p>
-                                </div>
                             </div>
-                            <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                            <a href="" class="post-link">
                                 <h2 class="card-title">{{ post.title }}</h2>
                                 <div>
                                 </div>
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
                             <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
-                                {{ post.number_of_likes }}</p>
+                            <p class="card-text text-muted h6">{{ post.created_on}}</p>
                         </div>
                     </div>
                 </div>
