--- a/static/css/base.css
+++ b/static/css/base.css
@@ -406,6 +406,10 @@ input[name='q']::placeholder {
     border-radius: 0;
 }
 
+.top_spacer {
+    margin-top: 10%;
+}
+
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
