--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -39,10 +39,10 @@
             <a class="logo-font font-weight-bold nav-link text-black emph-black-bg" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Blog
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
+            <div class="dropdown-menu border-0" aria-labelledby="blog-link">
                 <a href="" class="dropdown-item">Top Posts</a>
                 <a href="" class="dropdown-item">Latest Posts</a>
-                <a href="" class="dropdown-item">Placeholder</a>
+                <a href="{% url 'blog' %}" class="dropdown-item">All Posts</a>
                 <a href="" class="dropdown-item">Placeholder</a>
             </div>
         </li>
