--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,42 +34,52 @@
                     Shop by category below:
                 </h3>
                 <div class="row my-5 align-items-center justify-content-center">                 
-                    <div class="col-10 col-lg-3 col-xl-2">
+                    <div class="col-8 col-lg-3 col-xl-2">
                         <a href="{% url 'products' %}?category=electric_guitars">
                             <div class="card p-3">
-                                <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                                <img class="card-img-top zoom" src="/media/elecguitar_img.png" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title text-black">Electric Guitars</h5>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="col-10 col-lg-3 col-xl-2">
+                    <div class="col-8 col-lg-3 col-xl-2">
                         <a href="{% url 'products' %}?category=acoustic_guitars">
                             <div class="card p-3">
-                                <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                                <img class="card-img-top zoom" src="/media/acousticguitar_img.png" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title text-black">Acoustic Guitars</h5>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="col-10 col-lg-3 col-xl-2">
-                        <a href="{% url 'products' %}?category=accessories">
+                    <div class="col-8 col-lg-3 col-xl-2">
+                        <a href="{% url 'products' %}?category=strings,tuners">
                             <div class="card p-3">
-                                <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                                <img class="card-img-top zoom" src="/media/accessories_img.png" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title text-black">Accessories</h5>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="col-10 col-lg-3 col-xl-2">
-                        <a href="{% url 'products' %}?category=amplifiers">
+                    <div class="col-8 col-lg-3 col-xl-2">
+                        <a href="{% url 'products' %}?category=Guitar_Amps">
                             <div class="card p-3">
-                                <img class="card-img-top zoom" src="/media/14991870_800-crop.jpg" alt="Card image cap">
+                                <img class="card-img-top zoom" src="/media/amplifiers_img.png" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title text-black">Amplifiers</h5>
+                                    <h5 class="card-title text-black">Guitar Amplifiers</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-8 col-lg-3 col-xl-2">
+                        <a href="{% url 'products' %}?category=electric_acoustic_guitars">
+                            <div class="card p-3">
+                                <img class="card-img-top zoom" src="/media/elecacoustic_img.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title text-black">Elec-Acoustic Guitars</h5>
                                 </div>
                             </div>
                         </a>
