Fix product review not showing bug

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -96,7 +96,7 @@
             </div>
         </div>
     </div>
-    {% for productreview in productreviews %}
+    {% for productreview in review %}
     <div class="comments" style="padding: 10px;">
         <p class="font-weight-bold">
             <!-- The reviewer's's name goes here. -->
