--- a/templates/base.html
+++ b/templates/base.html
@@ -140,15 +140,8 @@
     {% endblock %}
 
 <!-- Footer based on https://mdbootstrap.com/snippets/standard/mdbootstrap/2885008?view=side with customisation and styling changes -->
-<footer
-            class="text-center text-lg-start text-white"
-            style="background-color: #000000"
-            >
-            <!-- <h2>Where to find us</h2> -->
-            <!--Google maps embedded link-->
-                <!-- <div id="footer-text-content-grid">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.386593402616!2d-6.297515784034856!3d53.35423588182114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c352b93a0a7%3A0x3c2968f9eb75d67a!2s57%20N%20Circular%20Rd%2C%20Cabra%20East%2C%20Dublin%207%2C%20D07%20A440!5e0!3m2!1sen!2sie!4v1661273834784!5m2!1sen!2sie" title="location of the orchard cafe on google maps" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="google-map"></iframe>
-                    <div id="footer-address" class="footer-content address"> -->
+<footer class="text-center text-lg-start text-white mt-5"
+            style="background-color: #000000">
       <!-- Section: Links  -->
       <section class="d-flex justify-content-between p-4"
       style="background-color: #000000">
@@ -173,16 +166,7 @@
                   <i class="fab fa-facebook-f"></i>
                 </a>
                 <a href="" class="text-white me-4">
-                  <i class="fab fa-twitter"></i>
-                </a>
-                <a href="" class="text-white me-4">
-                  <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="text-white me-4">
                   <i class="fab fa-instagram"></i>
-                </a>
-                <a href="" class="text-white me-4">
-                  <i class="fab fa-linkedin"></i>
                 </a>
                 <a href="" class="text-white me-4">
                   <i class="fab fa-github"></i>
