--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 <!-- container for highlighted product categories -->
-    <div class="container-fluid category-highlighted py-5">
+    <!-- <div class="container-fluid category-highlighted py-5">
         <div class="text-center">
                 <h3 class="text-black">
                     Shop by category below:
@@ -36,7 +36,7 @@
                     <div class="col-8 col-lg-3 col-xl-2">
                         <a href="{% url 'products' %}?category=electric_guitars">
                             <div class="card p-3">
-                                <img class="card-img-top zoom" src="/media/elecguitar_img.png" alt="Card image cap">
+                                <img class="card-img-top zoom" src="{{ category.category_img.url }}" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title text-black">Electric Guitars</h5>
                                 </div>
@@ -84,8 +84,11 @@
                         </a>
                     </div>
                 </div>
-            <!-- </div> -->
+            </div>
         </div>
-    </div>
+    </div> -->
 
+{% endblock %}
+
+{% block category_list %}
 {% endblock %}
