--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,8 +26,35 @@
             </div>
         </div>
     </div>
+
+    <!-- Shop by category section -->
+    <div class="container-fluid category-highlighted py-5">
+        <div class="text-center">
+            <h3 class="text-black">
+                Shop by category below:
+            </h3>
+        <!-- <div class="row my-5 align-items-center justify-content-center">      -->
+            <div class="row my-5 align-items-center justify-content-center">
+    {% for category in categories %}
+ 
+                <!-- <div class="col-8 col-lg-3 col-xl-2"> -->
+                    <a href="{% url 'products' %}?category={{ category.name }}">
+                        <div class="card p-3">
+                            <img class="card-img-top zoom" src="{{ category.featured_img.url }} alt="category image">
+                            <div class="card-body">
+                                <h5 class="card-title text-black">{{ category.friendly_name }}</h5>
+            
+                            </div>
+                        </div>
+                    </a>
+                <!-- </div> -->
+            </div>
+        <!-- </div> -->
+    {% endfor %}
+        </div>
+    </div>
 <!-- container for highlighted product categories -->
-    <!-- <div class="container-fluid category-highlighted py-5">
+    <div class="container-fluid category-highlighted py-5">
         <div class="text-center">
                 <h3 class="text-black">
                     Shop by category below:
@@ -36,7 +63,7 @@
                     <div class="col-8 col-lg-3 col-xl-2">
                         <a href="{% url 'products' %}?category=electric_guitars">
                             <div class="card p-3">
-                                <img class="card-img-top zoom" src="{{ category.category_img.url }}" alt="Card image cap">
+                                <img class="card-img-top zoom" src="/media/elecguitar_img.png" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title text-black">Electric Guitars</h5>
                                 </div>
@@ -86,9 +113,6 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
-{% endblock %}
-
-{% block category_list %}
 {% endblock %}
