--- a/products/templates/products/category_list.html
+++ b/products/templates/products/category_list.html
@@ -2,29 +2,31 @@
 
 
 {% block category_list %}
-
+<h1>Just a test message to see if this displays</h1>
 <!-- Shop by category section -->
 <div class="container-fluid category-highlighted py-5">
     <div class="text-center">
             <h3 class="text-black">
                 Shop by category below:
             </h3>
-{% for category in category_list %}
+    </div>
+</div>
+{% for category in categorys %}
 <div class="row my-5 align-items-center justify-content-center">                 
     <div class="col-8 col-lg-3 col-xl-2">
         <a href="{% url 'products' %}?category={{ category.name }}">
             <div class="card p-3">
-                <img class="card-img-top zoom" src="{{ category.category_img }}" alt="Card image cap">
+                <img class="card-img-top zoom" src="{{ category.category_img.url }}" alt="Card image cap">
                 <div class="card-body">
+                    <h1>Just a test message to see if this displays</h1>
                     <h5 class="card-title text-black">{{ category.friendly_name }}</h5>
+
                 </div>
             </div>
         </a>
     </div>
 </div>
 {% endfor %}
-</div>
-</div>
 
 
 {% endblock %}
