Add blog link and github link to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,7 @@
                 <a href="" class="text-white me-4">
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a href="" class="text-white me-4">
+                <a href="https://github.com/Christo107" class="text-white me-4">
                   <i class="fab fa-github"></i>
                 </a>
               </div>
@@ -190,7 +190,7 @@
                 <a href="{% url 'products' %}" class="text-white">All products</a>
               </p>
               <p>
-                <a href="" class="text-white">Blog</a>
+                <a href="{% url 'blog' %}" class="text-white">Blog</a>
               </p>
               <p>
                 <a href="{% url 'profile' %}" class="text-white">Your Account</a>
