Add mailchimp newsletter signup form to footer

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -111,6 +111,12 @@
                         <!-- The body of the review goes before the | -->
                         {{  productreview.body | linebreaks }}
                     </div>
+                    {% if user.is_superuser %}
+                    <div>
+                        <button class="btn"><a href="">Edit Review</a></button>
+                        <button class="btn"><a id="remove_{{ item.item_id }}">Delete Review</a></button>
+                    </div>
+                    {% endif %}
     <!-- Our for loop ends here -->
     {% endfor %}
     {% if reviewed %}
