--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,6 +8,12 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
 }
 
 /* footer styles
