--- a/templates/base.html
+++ b/templates/base.html
@@ -185,7 +185,7 @@
                   style="width: 60px; background-color: #ffffff; height: 2px"
                   />
               <p>
-                <a href="#" class="text-white">Home</a>
+                <a href="{% url 'home' %}" class="text-white">Home</a>
               </p>
               <p>
                 <a href="{% url 'products' %}" class="text-white">All products</a>
