Added contactus form, model, views and urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -212,6 +212,7 @@
                     <p><i class="fas fa-home mr-3"></i>Dublin 7</p>
                     <p><i class="fas fa-envelope mr-3"></i><a href="mailto:infotestemail@guitarworld.ie" class="text-white">info@guitarworld.ie</a></p>
                     <p><i class="fas fa-phone mr-3"></i>01 557 58469</p>
+                    <p><i class="fas fa-envelope mr-3"></i><a href="{% url 'contact_us' %}" class="text-white">Message Us</a></p>
                 </address>
             </div>
             <!-- Grid column -->
