--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,7 @@
               </p>
               <span>Follow us on our social networks:</span>
               <div>
-                <a href="" class="text-white me-4">
+                <a href="https://www.facebook.com/profile.php?id=61551557630644" class="text-white me-4">
                   <i class="fab fa-facebook-f"></i>
                 </a>
                 <a href="" class="text-white me-4">
