--- a/contact/templates/contact/contactus.html
+++ b/contact/templates/contact/contactus.html
@@ -14,10 +14,9 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row">        
-        <div class="col-12 col-md-6">
-            <hr>
-            <h1 class="logo-font mb-4">Contact Us</h1>
+    <div class="row justify-content-center">        
+        <div class="col-12 col-md-6 mt-3">
+            <h2 class="logo-font text-center mb-4">Contact Us</h2>
             <hr>
             <form action="{% url 'contact_us' %}" method="POST" id="contact-form">
                 {% csrf_token %}
