Tidy code remvoing unnecessary links

--- a/templates/base.html
+++ b/templates/base.html
@@ -163,11 +163,8 @@
               </p>
               <span>Follow us on our social networks:</span>
               <div>
-                <a href="https://www.facebook.com/profile.php?id=61551557630644" class="text-white me-4">
+                <a href="https://www.facebook.com/profile.php?id=61551557630644" target="_blank" class="text-white me-4">
                   <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="text-white me-4">
-                  <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://github.com/Christo107" target="_blank" class="text-white me-4">
                   <i class="fab fa-github"></i>
