Add meta description and keywords to head for SEO

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Dublin based musical instrument shop">
+        <meta name="keywords" content="guitars, music, guitar strings, les paul, fender, gibson, harley benton, ernie ball, elixir, squier, taylor acoustic">
     {% endblock %}
 
     {% block extra_meta %}
