--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@
     {% endblock %}
 
     <title>Guitar World {% block extra_title %}{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
   </head>
   <body>
     <header class="container-fluid fixed-top">
