Update to fix W3C and jigsaw errors

--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -19,7 +19,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5 emph-black-bg" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5 emph-black-bg" href="#" id="guitars-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Guitars
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="guitars-link">
@@ -42,7 +42,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black emph-black-bg" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black emph-black-bg" href="#" id="blog-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Blog
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="blog-link">
