Add styling change to text for accessibilty

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -278,7 +278,7 @@ input[name='q']::placeholder {
 }
 
 .allauth-form-inner-content a {
-	color: #17a2b8; /* text-info */
+	color: #0c6977; /* text-info */
 }
 
 /* Product Form */
